--- a/moje-wizyty.html
+++ b/moje-wizyty.html
@@ -65,8 +65,8 @@
       </div>
       <div>
         <p>Godziny otwarcia:</p>
-        <p>Poniedziałek – Piątek: 8:00 – 18:00</p>
-        <p>Sobota: 9:00 – 14:00</p>
+        <p>Poniedziałek – Piątek: 8:00 – 20:00</p>
+        <p>Sobota: Nieczynne</p>
         <p>Niedziela: Nieczynne</p>
       </div>
     </div>
