--- a/umow-wizyte-lokal.html
+++ b/umow-wizyte-lokal.html
@@ -29,7 +29,7 @@
     .submit-button { text-align:center; margin-top:20px; }
     .submit-button button { padding:10px 20px; background:#4caf50; color:#fff; border:none; border-radius:4px; font-size:1rem; cursor:pointer; transition: background .2s ease; }
     .submit-button button:hover { background:#388e3c; }
-    footer { background:#f4f4f4; padding:20px 0; margin-top:60px; }
+    footer { background:#f4f4f4; padding:px 0; margin-top:60px; }
     footer .container { display:flex; justify-content:space-between; flex-wrap:wrap; }
     footer p { margin:5px 0; }
     .timeslot-button.disabled {
@@ -351,7 +351,7 @@ const mm   = String(dateObj.getMonth() + 1).padStart(2,'0');
 const dd   = String(dateObj.getDate()).padStart(2,'0');
 selDate = `${yyyy}-${mm}-${dd}`; // zapamiętujemy w formacie YYYY-MM-DD
   await loadBookingsForDay(selDate);
-  for (let h = 8; h < 18; h++) {
+  for (let h = 8; h < 20; h++) {
     for (let m = 0; m < 60; m += 20) {
       if (h === 17 && m > 40) break;
       const t = `${String(h).padStart(2,'0')}:${String(m).padStart(2,'0')}`;
