--- a/umow-wizyte-lokal.html
+++ b/umow-wizyte-lokal.html
@@ -101,7 +101,7 @@
   <footer>
     <div class="container">
       <div><p>&copy; 2025 BKRJ Vet</p></div>
-      <div><p>Godziny otwarcia: Pon–Pt 8–18, Sb 9–14</p></div>
+      <div><p>Godziny otwarcia: Poniedziałek - Piątek: 8-20</p></div>
     </div>
   </footer>
 
