--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@ button:hover {
         <a href="login.html" id="nav-logowanie">Logowanie</a>
         <a href="#about">O nas</a>
         <a href="#contact">Kontakt</a>
+        <a href="faq.html">FAQ</a>
         <!-- „Moje Konto” zaczynamy od display: none; zostanie pokazane po zalogowaniu -->
         <a href="konto.html" id="nav-konto" style="display: none;">Moje Konto</a>
         <button id="logout-button" class="logout-btn">Wyloguj</button>
